--- a/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
+++ b/DarkRepos/src/DarkRepos.Web/DarkRepos.Web/Components/Layout/MainLayout.razor
@@ -79,6 +79,7 @@
 						<li><a href="https://github.com/TheAnsarya/GameInfo" target="_blank" rel="noopener">GitHub</a>
 						</li>
 						<li><a href="/docs/contributing">Contributing</a></li>
+						<li><a href="/about">About</a></li>
 					</ul>
 				</div>
 			</div>
